<?xml version="1.0"?>
<package>
  <name>boxy_bringup</name>
  <version>0.0.1</version>
  <description>Necessary scripts to bring up the robot boxy</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="amaldo@cs.uni-bremen.de">Alexis Maldonado</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv2+</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/boxy_bringup</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>ps3joy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>iai_boxy_cart</run_depend>
  <run_depend>topic_tools</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>omni_ethercat</run_depend>
  <run_depend>soft_runstop</run_depend>
  <run_depend>iai_control_utils</run_depend>
  <run_depend>boxy_description</run_depend>
  <run_depend>urg_node</run_depend>
  <run_depend>joy_torso_remote</run_depend>
  <run_depend>joint-state-publisher</run_depend>
  <run_depend>diagnostic-aggregator</run_depend>
  <run_depend>map-server</run_depend>
  <run_depend>urg_node</run_depend>
  <run_depend>amcl</run_depend>
  <run_depend>nav_pcontroller</run_depend>
  <!--run_depend>realtime_urdf_filter</run_depend-->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
