<?xml version="1.0"?>
<package>
  <name>iai_boxy_bringup</name>
  <version>0.0.0</version>
  <description>The iai_boxy_bringup package</description>
 
  <maintainer email="amaldo@todo.todo">amaldo</maintainer>


 <license>BSD</license>

 <buildtool_depend>catkin</buildtool_depend>
  <run_depend>omni_ethercat</run_depend>
  <run_depend>soft_runstop</run_depend>
  <run_depend>iai_boxy_teleop</run_depend>
  <run_depend>iai_boxy_description</run_depend>
  <run_depend>iai_maps</run_depend>
  <run_depend>wsg_50_driver</run_depend>
  <run_depend>omni_pose_follower</run_depend>
  <run_depend>ur_robot_driver</run_depend>
  <!--run_depend>ur_description</run_depend-->
  <run_depend>iai_ur_description</run_depend>
  <run_depend>nav_pcontroller</run_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
