<?xml version="1.0"?>
<package format="2">
  <name>iai_boxy_teleop</name>
  <version>0.0.1</version>
  <description>
    Provides teleoperation of the Boxy robot using a joystick.
  </description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>
  <maintainer email="amaldo@cs.uni-bremen.de">Alexis Maldonado</maintainer>

  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>
  <author email="amaldo@cs.uni-bremen.de">Alexis Maldonado</author>
  <author>Melonee Wise</author>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <export>
  </export>
</package>
